--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@mui/material": "^5.16.7",
     "@mui/x-date-pickers": "^7.13.0",
     "dayjs": "^1.11.13",
-    "next": "14.2.5",
+    "next": "^14.2.5",
+    "next-auth": "^4.24.8",
     "react": "^18",
     "react-dom": "^18"
   },
